src/features/darkmode/fixes.scss
.eye {
    // fix for Better-Moodle googly eyes being darkened
    background-color: white;
}

.activity-item.hiddenactivity .description .course-description-item,
.activity-item.hiddenactivity .activityiconcontainer,
.activity-item.hiddenactivity .badge,
.editing .activity-item:hover .activityiconcontainer,
.editing .activity-item:hover .description .course-description-item,
.editing .activity-item:hover .activityiconcontainer,
.editing .activity-item:hover .badge,
.path-mod .automatic-completion-conditions .badge {
    // Replace mix-blend-mode: multiply with mix-blend-mode: hard-light
    mix-blend-mode: hard-light !important;
}

